--- a/ReadMe
+++ b/ReadMe
@@ -1,5 +1,5 @@
-Проект классификации изображений земли - Классификация землепользования
-Датасет Levir-CD : https://github.com/S2Looking/Dataset
+Проект классификации изображений земли.
+Классификация землепользования на датасете Levir-CD : https://github.com/S2Looking/Dataset
 
 Задание:
 Разработайте нейронную сеть с помощью PyTorch, выполнив следующие шаги:
